# doohickey

./: Cargo.toml  README.md  demo.rs  main.rs  world.json
math/: mat4.rs  misc.rs  quaternion.rs  vec2.rs  vec3.rs
physics/: force.rs
screen_capture/: system.rs
shaders/: animation.vert  common.vert  pbr.frag  phong.frag  shader.frag  shader.vert
src/: Cargo.toml  animations.rs  assets.rs  camera.rs  engine.rs  foreign.rs  framebuffer.rs  input.rs  lights.rs  main.rs  material.rs  mesh.rs  mod.rs  model.rs  object.rs  physics.rs  player.rs  renderer.rs  settings.json  shaders.rs  shadows.rs  skeleton.rs  texture.rs  transform.rs  world.rs
src/animation/: basic.rs  clip.rs  curves.rs  frame.rs  mod.rs  pose.rs  skeleton.rs  track.rs  track_transform.rs
src/engine/: input.rs  mod.rs  timer.rs  window.rs
src/foreign/: collada.rs  dae.rs  gltf.rs  mod.rs
src/math/: mat4.rs  mod.rs  quaternion.rs  transform.rs  vec2.rs  vec3.rs
src/physics/: body.rs  collision.rs  force.rs  mod.rs
src/renderer/: buffer.rs  ebo.rs  framebuffer.rs  material.rs  mesh.rs  mod.rs  model.rs  renderer.rs  shaders.rs  shadows.rs  texture.rs  vao.rs  vertex.rs
src/scene/: camera.rs  lights.rs  mod.rs  viewer.rs  world.rs
src/screen_capture/: system.rs
src/shapes/: cube.rs  mod.rs  patterns.rs  quad.rs  shape.rs  sphere.rs  torus.rs
