[package]
name = "rust-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
sdl2 = "0.37.0"
egui = "0.28.1"
image = "0.25.2"
tobj = "4.0.2"
gltf = "1.4.1"
freetype = "0.7.2"

[[bin]]
name = "rust-engine"
path = "main.rs"
